figured out gallery grid somewhat; moved instructional files to separate folder. remaining issue: grid block spacing

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -128,25 +128,29 @@ form {
     /* Portfolio Grid */
     .gallerygrid {
         display: grid;
-        gap: 10px 15px;
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(2, 1fr);
-        padding: 15px;
     }
         .projects h3 {
             background-color: #4aaaa5;
             color: #fff;
             text-align: center;
             font-weight: lighter;
-            width: 210px;
+            width: 178px;
+            padding: 12px;
         }
         .projects img {
-            width: 225px;
-            height: 225px;
+            width: 200px;
+            height: 200px;
             object-fit: cover;
+            object-position: center;
+            border: #eee 1px solid;
         }
-        figure h3 {
-            position: absolute;
-                bottom: 10px;
-            padding: 8px;
-        }
+    .P1, .P2 {
+        position: absolute;
+            top: 60%;
+    }
+    .P3, .P4, .P5 {
+        position: relative;
+            bottom: -60%;
+    }
